# mosquitto

./: AGENTS.md  CMakeLists.txt  vcpkg.json
.github/workflows/: pulse-plugin.yml
cmake/: FindgRPC.cmake
plugins/: CMakeLists.txt
plugins/pulse/: CMakeLists.txt  README.md  plugin.cpp  pulse_client.cpp  pulse_client.h  pulse_data_type_detector.c  pulse_data_type_detector.h  pulse_discovery.c  pulse_discovery.h
pulse/proto/: CMakeLists.txt  error_response.proto  uuid.proto
pulse/proto/discovery/: get_ungoverned_data_point_request.proto  get_ungoverned_data_point_response.proto  get_ungoverned_datapoint_service.proto  get_ungoverned_topics_request.proto  get_ungoverned_topics_response.proto  get_ungoverned_topics_service.proto
pulse/proto/handshake/: handshake_service.proto  initial_agent_to_server_handshake_request.proto  initial_server_to_agent_handshake_response.proto
pulse/proto/heartbeat/: heartbeat_request.proto  heartbeat_response.proto  heartbeat_service.proto
pulse/proto/informationmodel/: ignored_deviation.proto  information_model.proto  information_model_chunk.proto  information_model_request.proto  information_model_response.proto  information_model_service.proto  information_model_updated_notification.proto  node.proto  node_delta.proto  relation.proto  relation_delta.proto
src/: conf.c  pulse_client.cpp  pulse_client.h  pulse_discovery.c  pulse_discovery.h  pulse_information_model.h
